@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.org.ollamafx'
-version = '0.2.0'
+version = '0.3.0'
 
 repositories {
     mavenCentral()
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
     implementation "io.github.ollama4j:ollama4j:1.0.100"
+    implementation 'org.fxmisc.richtext:richtextfx:0.11.0'
     implementation 'org.jsoup:jsoup:1.17.2'
     implementation 'io.github.mkpaz:atlantafx-base:2.0.1'
     implementation 'com.github.oshi:oshi-core-java11:6.4.0'
@@ -64,6 +65,14 @@ javafx {
 
 application {
     mainClass = 'com.org.ollamafx.Launcher'
+    applicationDefaultJvmArgs = ['-Xdock:name=OllamaFX', '-Xdock:icon=src/main/resources/icons/icon.png']
+}
+
+tasks.withType(JavaExec) {
+    if (System.getProperty('os.name').toLowerCase().contains('mac')) {
+        jvmArgs '-Xdock:name=OllamaFX'
+        jvmArgs "-Xdock:icon=${project.projectDir}/src/main/resources/icons/icon.png"
+    }
 }
 
 processResources {
@@ -102,5 +111,31 @@ task packageDistribution(type: Zip) {
             include archiveFileName.get()
         }
         println "Release copied to ${project.rootDir}/releases/${archiveFileName.get()}"
+    }
+}
+
+// Custom jpackage task for Mac
+task createInstaller(type: Exec) {
+    dependsOn shadowJar
+    workingDir project.rootDir
+    
+    // Command to key inputs:
+    // --input build/libs containing the shadow jar
+    // --main-jar the shadow jar name
+    // --icon the generated icns
+    
+    commandLine 'jpackage', 
+        '--input', 'build/libs',
+        '--name', 'OllamaFX',
+        '--main-jar', "OllamaFX-${version}.jar",
+        '--main-class', 'com.org.ollamafx.Launcher',
+        '--type', 'dmg',
+        '--icon', 'src/main/resources/icons/icon.icns',
+        '--dest', 'releases',
+        '--java-options', '--enable-preview' 
+        
+    doFirst {
+        mkdir 'releases'
+        println "Creating Installer with icon..."
     }
 }
